# tally-ho

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  secrets.env.example
.github/workflows/: ci.yml
predictor/: README.md  pyproject.toml
predictor/src/windfall/: __init__.py  atmosphere.py  cli.py  climatology.py  config.py  dem.py  descent.py  ensemble.py  ensemble_vec.py  geo.py  gfs.py  history.py  hrrr.py  integrator.py  kinematics.py  models.py  predictor.py  profile.py  replay.py  sim.py  telemetry.py  tracker.py  uncertainty.py
predictor/tests/: conftest.py  test_ablation.py  test_atmosphere.py  test_cli.py  test_dem.py  test_descent.py  test_edge_cases.py  test_ensemble.py  test_geo.py  test_gfs.py  test_history.py  test_hrrr.py  test_integrator.py  test_kinematics.py  test_predictor.py  test_profile.py  test_replay.py  test_telemetry.py  test_tracker.py
scripts/: docker-entrypoint.sh  gfs_download.py  prefetch_dem.sh
src/tallyho/: __init__.py  app.py  auth.py  backfill.py  cli.py  config.example.toml  config.py  dedup.py  events.py  geofence.py  ingest.py  models.py  notify.py  settings_meta.py  setup.py  store.py  web.py
src/tallyho/static/: dashboard.css  index.html  login.html  settings.css  settings.html  setup.html  theme.css
src/tallyho/static/js/: dashboard.js  events.js  history.js  map.js  settings.js  subscribers.js  tables.js  tokens.js  util.js
tests/: conftest.py  test_accuracy_store.py  test_app.py  test_auth.py  test_backfill.py  test_cli.py  test_climatology.py  test_config_template.py  test_dedup.py  test_events.py  test_geofence.py  test_ingest.py  test_notify.py  test_settings.py  test_setup.py  test_store.py  test_web.py
